fix(settings): ensure header height does not jump (#7005)

--- a/src/settings/pages/FlowsSettings.less
+++ b/src/settings/pages/FlowsSettings.less
@@ -6,4 +6,8 @@
         height: 100%;
         flex-grow: 1;
     }
+
+    .header {
+        flex-shrink: 0;
+    }
 }
