--- a/src/settings/pages/OrderManagementSettings.less
+++ b/src/settings/pages/OrderManagementSettings.less
@@ -2,4 +2,8 @@
     .container {
         flex-grow: 1;
     }
+
+    .header {
+        flex-shrink: 0;
+    }
 }
